Bug 135325 - UI: Thumbnails in start center are without document images
Summary: UI: Thumbnails in start center are without document images
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords: bibisected, bisected, regression
: 135840 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2020-07-30 18:00 UTC by Telesto
Modified: 2020-08-17 17:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (19.38 KB, application/vnd.oasis.opendocument.text)
2020-07-30 18:15 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-07-30 18:00:51 UTC
Description:
UI: Thumbnails in start center are without document images

Steps to Reproduce:
1. Open Writer
2. Open the attached file
3. Close the document -> Back to start center
3. Look at the thumbnail

Actual Results:
Thumbnail without image

Expected Results:
Thumbnail with containing image


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); GI: nl-NL
Calc: CL

not in 
6.5 master
Comment 1 Telesto 2020-07-30 18:15:09 UTC
Created attachment 163789 [details]
Example file
Comment 2 Xisco Faulí 2020-07-31 17:07:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fa47f9781fff89698a68353f9f37ea3ac6bda43c

author	Caolán McNamara <caolanm@redhat.com>	2020-07-16 11:10:53 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-07-16 15:14:23 +0200
commit fa47f9781fff89698a68353f9f37ea3ac6bda43c (patch)
tree 17eeb9bedc8eae5d1eb3d9e1b53568dfd862b614
parent be6f71c546e4826bda43762877d8d424d4f903a7 (diff)
tdf#134841 image totally clipped out

bisected with: bibisect-linux64-7.1

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2020-07-31 19:55:14 UTC
the gift that keeps giving
Comment 4 Caolán McNamara 2020-07-31 20:06:25 UTC
This is a record to metafile case and they are clipped out because the metafile device size is nominal. Normally we write to the metafile before doing the offending test to see if there would be any visual output.

https://gerrit.libreoffice.org/c/core/+/99900
Comment 5 Commit Notification 2020-08-01 14:12:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6beec0ec54975aa02e391c223633a42f6f5afe0e

tdf#135325 previews missing content drawn via DrawTransformedBitmapEx

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-08-01 14:24:04 UTC
fixed in master, backport to 7-0 in gerrit
Comment 7 Commit Notification 2020-08-01 17:30:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/509e34d69cd15dc8532f90e8875f8afbdb2cec60

tdf#135325 previews missing content drawn via DrawTransformedBitmapEx

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2020-08-10 10:06:15 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 6ad2f463784a24c566477cdd60ae729651bb8564
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 9 Telesto 2020-08-17 17:58:02 UTC
*** Bug 135840 has been marked as a duplicate of this bug. ***