tdf#135325 previews missing content drawn via DrawTransformedBitmapEx

Typically in these OutputDevice methods, the record-to-metafile case the
MetaFile is already written to before the test against mbOutputClipped to
determine that output to the current device would result in no visual output
(due to the output being outside the bounds of the device).

In this case the metafile is written after the test, so we must continue past
mbOutputClipped if recording to a metafile. It's typical to record with a
device of nominal size and play back later against something of a totally
different size.

Change-Id: Id1249b10f919165582f7de65b4cdc4d48074abaa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99900
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>